Add forecasting report page with Holt-Winters forecast

--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,9 @@ dash-bootstrap-components = "*"
 flask-sqlalchemy = "*"
 flask-caching = "*"
 python-dateutil = "*"
+scipy = "*"
+numpy = "*"
+statsmodels = "*"
 
 [dev-packages]
 
